--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -2,3 +2,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug displaying progress for wget #818](https://github.com/stefanpejcic/OpenPanel/issues/818#event-21795034137)
+- [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
