--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- Option to view raw activity log and download it from *OpenAdmin > Users > single user > Activity* page.
+
 ### 🐛 Bug Fixes
 - [Bug displaying progress for wget #818](https://github.com/stefanpejcic/OpenPanel/issues/818#event-21795034137)
 - [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
