--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -5,4 +5,5 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug displaying progress for wget #818](https://github.com/stefanpejcic/OpenPanel/issues/818#event-21795034137)
+- [Adding same domain multiple times creates a problem #828](https://github.com/stefanpejcic/OpenPanel/issues/828)
 - [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
