--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -4,6 +4,7 @@ Not yet released.
 - Option to view raw activity log and download it from *OpenAdmin > Users > single user > Activity* page.
 
 ### 🐛 Bug Fixes
+- [ Fix opencli faq failing to detect panel domain (#62) #64 ](https://github.com/stefanpejcic/opencli/pull/64)
 - [Bug displaying progress for wget #818](https://github.com/stefanpejcic/OpenPanel/issues/818#event-21795034137)
 - [Adding same domain multiple times creates a problem #828](https://github.com/stefanpejcic/OpenPanel/issues/828)
 - [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
