--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Option to view raw activity log and download it from *OpenAdmin > Users > single user > Activity* page.
+- [OpenAdmin Keyboard Shortcuts #834](https://github.com/stefanpejcic/OpenPanel/issues/834)
 
 ### 🐛 Bug Fixes
 - [ Fix opencli faq failing to detect panel domain (#62) #64 ](https://github.com/stefanpejcic/opencli/pull/64)
