--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -10,3 +10,4 @@ Not yet released.
 - [Adding same domain multiple times creates a problem #828](https://github.com/stefanpejcic/OpenPanel/issues/828)
 - [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
 - Fixed bug detecting panel domain and using https in `opencli api-list` command.
+- Ficed broken link in OpenPanel login email template.
