--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -10,4 +10,5 @@ Not yet released.
 - [Adding same domain multiple times creates a problem #828](https://github.com/stefanpejcic/OpenPanel/issues/828)
 - [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
 - Fixed bug detecting panel domain and using https in `opencli api-list` command.
-- Ficed broken link in OpenPanel login email template.
+- Fixed broken link in OpenPanel login email template.
+- [Issue with SSL registration and management of domains #833](https://github.com/stefanpejcic/OpenPanel/issues/833#event-22290826445)
