--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -11,4 +11,4 @@ Not yet released.
 - [Bug - user able to change webserver without removing all domains first #825](https://github.com/stefanpejcic/OpenPanel/issues/825)
 - Fixed bug detecting panel domain and using https in `opencli api-list` command.
 - Fixed broken link in OpenPanel login email template.
-- [Issue with SSL registration and management of domains #833](https://github.com/stefanpejcic/OpenPanel/issues/833#event-22290826445)
+- [Install: jq: parse error: Invalid numeric literal at line 1, column 10 #835](https://github.com/stefanpejcic/OpenPanel/issues/835#event-22290722545)
