--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- The [opencli user-login](https://dev.openpanel.com/cli/users.html#Login-as-User) command no longer logs into a user container; it now generates an auto-login link for the OpenPanel UI.
 - Option to view raw activity log and download it from *OpenAdmin > Users > single user > Activity* page.
 - [OpenAdmin Keyboard Shortcuts #834](https://github.com/stefanpejcic/OpenPanel/issues/834)
 - [Commands 'php-available_versions' 'php-installed_versions' and 'php-ini' are removed](https://github.com/stefanpejcic/dev.openpanel.com/commit/c46c9f5e028c7fcf3c734cbe2667b5ed1bc85ec1).
