--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -15,3 +15,4 @@ Not yet released.
 - Fixed bug detecting panel domain and using https in `opencli api-list` command.
 - Fixed broken link in OpenPanel login email template.
 - [Install: jq: parse error: Invalid numeric literal at line 1, column 10 #835](https://github.com/stefanpejcic/OpenPanel/issues/835#event-22290722545)
+- [Memory Usage not correct #830](https://github.com/stefanpejcic/OpenPanel/issues/830)
