--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -17,3 +17,4 @@ Not yet released.
 - [Install: jq: parse error: Invalid numeric literal at line 1, column 10 #835](https://github.com/stefanpejcic/OpenPanel/issues/835#event-22290722545)
 - [Memory Usage not correct #830](https://github.com/stefanpejcic/OpenPanel/issues/830)
 - [500 error for WP Scan action on OpenLitespeed webserver #837](https://github.com/stefanpejcic/OpenPanel/issues/837)
+- Ficed bug in `opencli php-default` script failing to update version if username was renamed.
