--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -19,4 +19,5 @@ Not yet released.
 - [Install: jq: parse error: Invalid numeric literal at line 1, column 10 #835](https://github.com/stefanpejcic/OpenPanel/issues/835#event-22290722545)
 - [Memory Usage not correct #830](https://github.com/stefanpejcic/OpenPanel/issues/830)
 - [500 error for WP Scan action on OpenLitespeed webserver #837](https://github.com/stefanpejcic/OpenPanel/issues/837)
-- Ficed bug in `opencli php-default` script failing to update version if username was renamed.
+- Fixed bug in `opencli php-default` script failing to update version if username was renamed.
+- Fixed error running 'opencli faq' command: [`/usr/local/opencli/faq.sh: line 250: syntax error: unexpected end of file`](https://github.com/stefanpejcic/opencli/commit/75afd5c177668aa946f55294ea354163133d81ee)
