--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -7,6 +7,7 @@ Not yet released.
 - [Commands 'php-available_versions' 'php-installed_versions' and 'php-ini' are removed](https://github.com/stefanpejcic/dev.openpanel.com/commit/c46c9f5e028c7fcf3c734cbe2667b5ed1bc85ec1).
 - Command 'firewall-reset' is deprecated.
 - 'opencli api-list' is renamed to 'opencli api' and [extended to support: on|off|status|list](https://dev.openpanel.com/cli/api.html).
+- [Added option to delete notifications on OpenAdmin > Notifications](https://i.postimg.cc/MWHJK2nv/2026-01-28-12-19.png).
 
 ### 🐛 Bug Fixes
 - [PHP 8.5 support #720](https://github.com/stefanpejcic/OpenPanel/issues/720)
