--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -21,3 +21,4 @@ Not yet released.
 - [500 error for WP Scan action on OpenLitespeed webserver #837](https://github.com/stefanpejcic/OpenPanel/issues/837)
 - Fixed bug in `opencli php-default` script failing to update version if username was renamed.
 - Fixed error running 'opencli faq' command: [`/usr/local/opencli/faq.sh: line 250: syntax error: unexpected end of file`](https://github.com/stefanpejcic/opencli/commit/75afd5c177668aa946f55294ea354163133d81ee)
+- [Fixed bug with `opencli license` commands failing to save license key](https://github.com/stefanpejcic/opencli/commit/4e31f27b850bab4aaf07b8142f0ec19669782a67).
