--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -23,3 +23,5 @@ Not yet released.
 - Fixed error running 'opencli faq' command: [`/usr/local/opencli/faq.sh: line 250: syntax error: unexpected end of file`](https://github.com/stefanpejcic/opencli/commit/75afd5c177668aa946f55294ea354163133d81ee)
 - [Fixed bug with `opencli license` commands failing to save license key](https://github.com/stefanpejcic/opencli/commit/4e31f27b850bab4aaf07b8142f0ec19669782a67).
 - [Fixed bug with `opencli user-email` command refusing to set email for user if already set for another user](https://github.com/stefanpejcic/opencli/commit/abac6804505cd447ba280755f868e244357510e4).
+- [JS bug in OpenAdmin UI for 'Recent' menu when 404 #840](https://github.com/stefanpejcic/OpenPanel/issues/840)
+- [Suspended users should be excluded in OpenAdmin > Domains when addin a new domain #842](https://github.com/stefanpejcic/OpenPanel/issues/842)
