--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -25,3 +25,4 @@ Not yet released.
 - [Fixed bug with `opencli user-email` command refusing to set email for user if already set for another user](https://github.com/stefanpejcic/opencli/commit/abac6804505cd447ba280755f868e244357510e4).
 - [JS bug in OpenAdmin UI for 'Recent' menu when 404 #840](https://github.com/stefanpejcic/OpenPanel/issues/840)
 - [Suspended users should be excluded in OpenAdmin > Domains when addin a new domain #842](https://github.com/stefanpejcic/OpenPanel/issues/842)
+- Fixed bug on pgAdmin with the default user not having permissions to access the 'public' schema.
