--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -8,6 +8,7 @@ Not yet released.
 - 'opencli api-list' is renamed to 'opencli api' and [extended to support: on|off|status|list](https://dev.openpanel.com/cli/api.html).
 - `--ssh` flag is removed from 'opencli user-password' command.
 - [Added option to delete notifications on OpenAdmin > Notifications](https://i.postimg.cc/MWHJK2nv/2026-01-28-12-19.png).
+- Improvements to the user deletion and suspend processes.
 
 ### 🐛 Bug Fixes
 - [ Fix opencli faq failing to detect panel domain (#62) #64 ](https://github.com/stefanpejcic/opencli/pull/64)
