--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -27,3 +27,5 @@ Not yet released.
 - [JS bug in OpenAdmin UI for 'Recent' menu when 404 #840](https://github.com/stefanpejcic/OpenPanel/issues/840)
 - [Suspended users should be excluded in OpenAdmin > Domains when addin a new domain #842](https://github.com/stefanpejcic/OpenPanel/issues/842)
 - Fixed bug on pgAdmin with the default user not having permissions to access the 'public' schema.
+- Fixed bug with pgadmin failing to start if no email address is defined.
+- Fixed bug on WP Manager showing console error for major WP version format (`N.N`).
