--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -1,4 +1,5 @@
-Not yet released.
+Released on January 29, 2025
+
 
 ### 💅 Polish
 - The [opencli user-login](https://dev.openpanel.com/cli/users.html#Login-as-User) command no longer logs into a user container; it now generates an auto-login link for the OpenPanel UI.
