--- a/website/docs/changelog/1.7.41.md
+++ b/website/docs/changelog/1.7.41.md
@@ -1,5 +1,9 @@
 Released on January 29, 2025
 
+### 💅 Polish
+- [OpenAdmin Keyboard Shortcuts #834](https://github.com/stefanpejcic/OpenPanel/issues/834)
+
+
 ### 🐛 Bug Fixes
 - [ Fix opencli faq failing to detect panel domain (#62) #64 ](https://github.com/stefanpejcic/opencli/pull/64)
 - [Bug displaying progress for wget #818](https://github.com/stefanpejcic/OpenPanel/issues/818#event-21795034137)
