--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -1,4 +1,6 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
-- Ficed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
+- Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
+- Fixed bug with values showing comments on *OpenPanel > PostgreSQL > Configuration Editor*.
+- Fixed bug with postgres that caused the custom settings added via *OpenPanel > PostgreSQL > Configuration Editor* to be lost on postgres version update.
