--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- Added [`--panel` flag to `opencli update` command](https://dev.openpanel.com/cli/update.html).
+
 ### 🐛 Bug Fixes
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
 - Fixed bug with values showing comments on *OpenPanel > PostgreSQL > Configuration Editor*.
