--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - Added [`--panel` flag to `opencli update` command](https://dev.openpanel.com/cli/update.html).
 - Added [update support for custom OpenPanel UI images](https://github.com/stefanpejcic/opencli/commit/9f3fc88685da31ecccf4a73506009aa33ca93e74).
+- Added [`/api/notifications` endpoint on OpenAdmin](https://dev.openpanel.com/openadmin-api/notifications.html).
 
 ### 🐛 Bug Fixes
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
