--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -5,6 +5,7 @@ Not yet released.
 - Added [update support for custom OpenPanel UI images](https://github.com/stefanpejcic/opencli/commit/9f3fc88685da31ecccf4a73506009aa33ca93e74).
 - Added [`/api/notifications` endpoint on OpenAdmin](https://dev.openpanel.com/openadmin-api/notifications.html).
 - `/api/usage/disk/<username>` api endpoint is renamed to: `/api/usage/disk`
+- Refactored [WHMCS module for account provisioning on OpenPanel server](https://github.com/stefanpejcic/OpenPanel-whmcs-module).
 
 ### 🐛 Bug Fixes
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
