--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -12,3 +12,4 @@ Not yet released.
 - Fixed bug with values showing comments on *OpenPanel > PostgreSQL > Configuration Editor*.
 - Fixed bug with postgres that caused the custom settings added via *OpenPanel > PostgreSQL > Configuration Editor* to be lost on postgres version update.
 - [Bug saving custom values on PostgreSQL Configuration page #843](https://github.com/stefanpejcic/OpenPanel/issues/843)
+- [Fixed bug deleting OpenPanel user from database on account termination](https://github.com/stefanpejcic/opencli/commit/33b5779301499b1df6c3cfc3fe480afa250da4ca).
