--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -6,6 +6,8 @@ Not yet released.
 - Added [`/api/notifications` endpoint on OpenAdmin](https://dev.openpanel.com/openadmin-api/notifications.html).
 - `/api/usage/disk/<username>` api endpoint is renamed to: `/api/usage/disk`
 - Refactored [WHMCS module for account provisioning on OpenPanel server](https://github.com/stefanpejcic/OpenPanel-whmcs-module).
+- Cron file size is limited to `100KB`.
+- MySQL Import file is limited to `1GB`.
 
 ### 🐛 Bug Fixes
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
