--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -8,6 +8,7 @@ Not yet released.
 - Refactored [WHMCS module for account provisioning on OpenPanel server](https://github.com/stefanpejcic/OpenPanel-whmcs-module).
 - Cron file size is limited to `100KB`.
 - MySQL Import file is limited to `1GB`.
+- `elasticsearch.html` `redis.html` `opensearch.html` `memcached.html` templates are merged in `service.html`.
 
 ### 🐛 Bug Fixes
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
