--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -17,3 +17,4 @@ Not yet released.
 - [Bug saving custom values on PostgreSQL Configuration page #843](https://github.com/stefanpejcic/OpenPanel/issues/843)
 - [Fixed bug deleting OpenPanel user from database on account termination](https://github.com/stefanpejcic/opencli/commit/33b5779301499b1df6c3cfc3fe480afa250da4ca).
 - Fixed bug on ProcessManager with displaying container names.
+- [Fixed bug deleting suspended user from database](https://github.com/stefanpejcic/opencli/commit/5076c36486663a000c647b2c07fd4ca8ca565ed4).
