--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -18,3 +18,4 @@ Not yet released.
 - [Fixed bug deleting OpenPanel user from database on account termination](https://github.com/stefanpejcic/opencli/commit/33b5779301499b1df6c3cfc3fe480afa250da4ca).
 - Fixed bug on ProcessManager with displaying container names.
 - [Fixed bug deleting suspended user from database](https://github.com/stefanpejcic/opencli/commit/5076c36486663a000c647b2c07fd4ca8ca565ed4).
+- Fixed CSS bugs on Varnish and Services pages that caused the 'edit limits' button to be displayed even when `docker` module is not enabled.
