--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -9,6 +9,8 @@ Not yet released.
 - Cron file size is limited to `100KB`.
 - MySQL Import file is limited to `1GB`.
 - `varnish.html`, `elasticsearch.html` `redis.html` `opensearch.html` `memcached.html` templates are merged in `service.html`.
+- [`--debug` flag on install script is removed](https://github.com/stefanpejcic/OpenPanel/commit/0cd2cc0bc9bdfd6fe5e7d0f11d45453bce29f6a3).
+- [Added optional `--selfsigned` flag to install script](https://github.com/stefanpejcic/OpenPanel/commit/8c532da7c945597796d039151e2e4d379f402456).
 
 ### 🐛 Bug Fixes
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
