--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -13,6 +13,7 @@ Not yet released.
 - [Added optional `--selfsigned` flag to install script](https://github.com/stefanpejcic/OpenPanel/commit/8c532da7c945597796d039151e2e4d379f402456).
 
 ### 🐛 Bug Fixes
+- [opencli ftp-delete also deletes the folder #841](https://github.com/stefanpejcic/OpenPanel/issues/841)
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
 - Fixed bug with values showing comments on *OpenPanel > PostgreSQL > Configuration Editor*.
 - Fixed bug with postgres that caused the custom settings added via *OpenPanel > PostgreSQL > Configuration Editor* to be lost on postgres version update.
