--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -22,3 +22,4 @@ Not yet released.
 - Fixed bug on ProcessManager with displaying container names.
 - [Fixed bug deleting suspended user from database](https://github.com/stefanpejcic/opencli/commit/5076c36486663a000c647b2c07fd4ca8ca565ed4).
 - Fixed CSS bugs on Varnish and Services pages that caused the 'edit limits' button to be displayed even when `docker` module is not enabled.
+- [opencli php-domain fails for OpenLitespeed #68](https://github.com/stefanpejcic/opencli/issues/68)
