--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -14,6 +14,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [`mysql > TLS/SSL error: SSL is required, but the server does not support it`](https://community.openpanel.org/d/236-openpanel-is-broken-on-debian-13-stay-on-debian-12/10)
+- [Wordpress Manager not showing PHP/MySQL information #850](https://github.com/stefanpejcic/OpenPanel/issues/850)
 - [opencli ftp-delete also deletes the folder #841](https://github.com/stefanpejcic/OpenPanel/issues/841)
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
 - Fixed bug with values showing comments on *OpenPanel > PostgreSQL > Configuration Editor*.
