--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -11,6 +11,7 @@ Not yet released.
 - `varnish.html`, `elasticsearch.html` `redis.html` `opensearch.html` `memcached.html` templates are merged in `service.html`.
 - [`--debug` flag on install script is removed](https://github.com/stefanpejcic/OpenPanel/commit/0cd2cc0bc9bdfd6fe5e7d0f11d45453bce29f6a3).
 - [Added optional `--selfsigned` flag to install script](https://github.com/stefanpejcic/OpenPanel/commit/8c532da7c945597796d039151e2e4d379f402456).
+- [Added fallback PageSpeed API license key for enterprise users](https://github.com/stefanpejcic/opencli/commit/e2e27b5d13c0a0f92d3d482c6cb42a9c25baeae3).
 
 ### 🐛 Bug Fixes
 - [`mysql > TLS/SSL error: SSL is required, but the server does not support it`](https://community.openpanel.org/d/236-openpanel-is-broken-on-debian-13-stay-on-debian-12/10)
