--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -26,3 +26,4 @@ Not yet released.
 - [Fixed bug deleting suspended user from database](https://github.com/stefanpejcic/opencli/commit/5076c36486663a000c647b2c07fd4ca8ca565ed4).
 - Fixed CSS bugs on Varnish and Services pages that caused the 'edit limits' button to be displayed even when `docker` module is not enabled.
 - [opencli php-domain fails for OpenLitespeed #68](https://github.com/stefanpejcic/opencli/issues/68)
+- (Fixed error `sed: can't read /etc/openpanel/caddy/domains/*.conf: No such file or directory` on install)[https://github.com/stefanpejcic/opencli/commit/a013d8378ae9b5126e804c7d51dad92d4ac1f499]
