--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -14,6 +14,7 @@ Not yet released.
 - [Added fallback PageSpeed API license key for enterprise users](https://github.com/stefanpejcic/opencli/commit/e2e27b5d13c0a0f92d3d482c6cb42a9c25baeae3).
 - Added [`filemanager_buttons_style` option](https://dev.openpanel.com/cli/config.html#filemanager-buttons-style).
 - Bootstrap icons font is removed from all OpenAdmin pages.
+- Clicking 'Go back to OpenAdmin' on OpenPanel wehn impersonating a user will firt terminate the openpanel user session, then redirect to OpenAdmin.
 
 ### 🐛 Bug Fixes
 - Fixed bug with auto-login on WP if user ID 1 does not exist.
