--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -18,6 +18,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed bug with auto-login on WP if user ID 1 does not exist.
+- Fixed JS bug in WP Manager that caused cache info  to be fetched twice.
 - [Fixed bug with pagespeed report generation producing invalid JSON if invalid api key is provided](https://github.com/stefanpejcic/opencli/commit/a4d90a4d53bd5aaaf58ab8093f662f835ee4db8b).
 - [`mysql > TLS/SSL error: SSL is required, but the server does not support it`](https://community.openpanel.org/d/236-openpanel-is-broken-on-debian-13-stay-on-debian-12/10)
 - [Wordpress Manager not showing PHP/MySQL information #850](https://github.com/stefanpejcic/OpenPanel/issues/850)
