--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- Visitors number on WP Manager is now automatically refreshed only if tab is active in user browser.
 - Added [`--panel` flag to `opencli update` command](https://dev.openpanel.com/cli/update.html).
 - Added [update support for custom OpenPanel UI images](https://github.com/stefanpejcic/opencli/commit/9f3fc88685da31ecccf4a73506009aa33ca93e74).
 - Added [`/api/notifications` endpoint on OpenAdmin](https://dev.openpanel.com/openadmin-api/notifications.html).
