--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -1,7 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
-- Visitors number on WP Manager is now automatically refreshed only if tab is active in user browser.
+- The server resource usage widget in top right corner in OpenAdmin is now automatically refreshed only when the tab is active in the browser.
 - Added [`--panel` flag to `opencli update` command](https://dev.openpanel.com/cli/update.html).
 - Added [update support for custom OpenPanel UI images](https://github.com/stefanpejcic/opencli/commit/9f3fc88685da31ecccf4a73506009aa33ca93e74).
 - Added [`/api/notifications` endpoint on OpenAdmin](https://dev.openpanel.com/openadmin-api/notifications.html).
@@ -16,6 +16,7 @@ Not yet released.
 - Added [`filemanager_buttons_style` option](https://dev.openpanel.com/cli/config.html#filemanager-buttons-style).
 - Bootstrap icons font is removed from all OpenAdmin pages.
 - Clicking 'Go back to OpenAdmin' on OpenPanel wehn impersonating a user will firt terminate the openpanel user session, then redirect to OpenAdmin.
+- The visitor count in WP Manager now automatically refreshes only when the tab is active in the user's browser.
 
 ### 🐛 Bug Fixes
 - Fixed bug with auto-login on WP if user ID 1 does not exist.
