--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -17,6 +17,7 @@ Not yet released.
 - Bootstrap icons font is removed from all OpenAdmin pages.
 - Clicking 'Go back to OpenAdmin' on OpenPanel wehn impersonating a user will firt terminate the openpanel user session, then redirect to OpenAdmin.
 - The visitor count in WP Manager now automatically refreshes only when the tab is active in the user's browser.
+- Added inline comments on all OpenPanel templates, to help developers determine html template locations.
 
 ### 🐛 Bug Fixes
 - Fixed bug with auto-login on WP if user ID 1 does not exist.
