--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -21,6 +21,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed bug with auto-login on WP if user ID 1 does not exist.
+- [User Disk and Inodes quotas not supported on AlmaLinux 10 #744](https://github.com/stefanpejcic/OpenPanel/issues/744#issuecomment-3859583653)
 - Fixed JS bug in WP Manager that caused cache info  to be fetched twice.
 - [Fixed bug with pagespeed report generation producing invalid JSON if invalid api key is provided](https://github.com/stefanpejcic/opencli/commit/a4d90a4d53bd5aaaf58ab8093f662f835ee4db8b).
 - [`mysql > TLS/SSL error: SSL is required, but the server does not support it`](https://community.openpanel.org/d/236-openpanel-is-broken-on-debian-13-stay-on-debian-12/10)
