--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- Added 'max_email_quota' setting for hosting plans.
 - The server resource usage widget in top right corner in OpenAdmin is now automatically refreshed only when the tab is active in the browser.
 - Added [`--panel` flag to `opencli update` command](https://dev.openpanel.com/cli/update.html).
 - Added [update support for custom OpenPanel UI images](https://github.com/stefanpejcic/opencli/commit/9f3fc88685da31ecccf4a73506009aa33ca93e74).
