--- a/website/docs/changelog/1.7.42.md
+++ b/website/docs/changelog/1.7.42.md
@@ -41,4 +41,5 @@ Not yet released.
 - [Fixed error `sed: can't read /etc/openpanel/caddy/domains/*.conf: No such file or directory` on install](https://github.com/stefanpejcic/opencli/commit/a013d8378ae9b5126e804c7d51dad92d4ac1f499])
 - [Fixed error: `ln: failed to create symbolic link '/usr/local/bin/opencli': File exists` on install with `--repair` flag](https://github.com/stefanpejcic/OpenPanel/commit/960c22b158a98f98fb564697bde3b1fccdc5ed5d).
 - Fixed bug on 'OpenAdmin > Emails > New' that allowed user to create unlimited email accounts regardles of plan limit.
+- [Bug in OpenPanel UI on /file-manager/upload #854](https://github.com/stefanpejcic/OpenPanel/issues/854)
 
