--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -4,3 +4,4 @@ Not yet released.
 - [Bulgarian translation](https://community.openpanel.org/d/246-govoris-li-blgarski-bulgarian-translation-for-openpanel)
 
 ### 🐛 Bug Fixes
+- Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
