--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - [Bulgarian translation](https://community.openpanel.org/d/246-govoris-li-blgarski-bulgarian-translation-for-openpanel)
 - Added [option to toggle dev_mode from *OpenAdmin > Settings > General* page](https://i.postimg.cc/jsfHnmZY/2026-02-09-14-14.png).
+- [local captcha options besides cloud #856](https://github.com/stefanpejcic/OpenPanel/discussions/856)
 
 ### 🐛 Bug Fixes
 - Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
