--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -8,3 +8,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
 - [Installation fails on Debian 13 (possibly Hetzner-specific) #851](https://github.com/stefanpejcic/OpenPanel/issues/851)
+- [Bug in OpenPanel UI on /ftp/password/ #859](https://github.com/stefanpejcic/OpenPanel/issues/859)
