--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -10,3 +10,4 @@ Not yet released.
 - [Installation fails on Debian 13 (possibly Hetzner-specific) #851](https://github.com/stefanpejcic/OpenPanel/issues/851)
 - [Bug in OpenPanel UI on /ftp/password/ #859](https://github.com/stefanpejcic/OpenPanel/issues/859)
 - [OpenAdmin log is redirected to systemd service instead of error.log #860](https://github.com/stefanpejcic/OpenPanel/issues/860)
+- Fixed 500 error on PHP pages.
