--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -12,3 +12,4 @@ Not yet released.
 - [Bug in OpenPanel UI on /ftp/password/ #859](https://github.com/stefanpejcic/OpenPanel/issues/859)
 - [OpenAdmin log is redirected to systemd service instead of error.log #860](https://github.com/stefanpejcic/OpenPanel/issues/860)
 - Fixed 500 error on PHP and Crons pages.
+- Fixed bug with 'Custom startup command' field being required on Site Manager.
