--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -13,3 +13,4 @@ Not yet released.
 - [OpenAdmin log is redirected to systemd service instead of error.log #860](https://github.com/stefanpejcic/OpenPanel/issues/860)
 - Fixed 500 error on PHP and Crons pages.
 - Fixed bug with 'Custom startup command' field being required on Site Manager.
+- Fixed bug with 'Startup file needs to be a .js file' message displayed when editing Python aplications startup file in Site Manager.
