--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -14,3 +14,4 @@ Not yet released.
 - Fixed 500 error on PHP and Crons pages.
 - Fixed bug with 'Custom startup command' field being required on Site Manager.
 - Fixed bug with 'Startup file needs to be a .js file' message displayed when editing Python aplications startup file in Site Manager.
+- Fixed bug on PgAdmin page that caused inalid email address to be set if email field is left blank.
