--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -15,3 +15,4 @@ Not yet released.
 - Fixed bug with 'Custom startup command' field being required on Site Manager.
 - Fixed bug with 'Startup file needs to be a .js file' message displayed when editing Python aplications startup file in Site Manager.
 - Fixed bug on PgAdmin page that caused inalid email address to be set if email field is left blank.
+- Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
