--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -5,6 +5,11 @@ Not yet released.
 - Added [option to toggle dev_mode from *OpenAdmin > Settings > General* page](https://i.postimg.cc/jsfHnmZY/2026-02-09-14-14.png).
 - [local captcha options besides cloud #856](https://github.com/stefanpejcic/OpenPanel/discussions/856)
 - Added ['cron_max_file_size_kb' setting](https://dev.openpanel.com/cli/config.html#cron-max-file-size-kb).
+- [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, and displaying the total number of domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
+
+
+
+
 
 ### 🐛 Bug Fixes
 - Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
