--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -7,10 +7,6 @@ Not yet released.
 - Added ['cron_max_file_size_kb' setting](https://dev.openpanel.com/cli/config.html#cron-max-file-size-kb).
 - [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, option to mange SSL, configure HSTS, disable WAF and suspend/uspuspend domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
 
-
-
-
-
 ### 🐛 Bug Fixes
 - Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
 - [Installation fails on Debian 13 (possibly Hetzner-specific) #851](https://github.com/stefanpejcic/OpenPanel/issues/851)
@@ -22,3 +18,4 @@ Not yet released.
 - Fixed bug on PgAdmin page that caused inalid email address to be set if email field is left blank.
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
 - Fixed bug that was causing *license invalid* messages on OpenAdmin pages with multi-core servers.
+- Fixed CSS bug on *OpenAdmin > Dahsboard > Activity widget* that did not truncate long text.
