--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -19,3 +19,4 @@ Not yet released.
 - Fixed bug with `load1min` value empty on *OpenAdmin > Advanced > Resource Usage* page.
 - Fixed bug that was causing *license invalid* messages on OpenAdmin pages with multi-core servers.
 - Fixed CSS bug on *OpenAdmin > Dahsboard > Activity widget* that did not truncate long text.
+- Fixed bug on email creation that caused quota to be displayed as unlimited in user panel.
