--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -8,6 +8,7 @@ Not yet released.
 - [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, option to mange SSL, configure HSTS, disable WAF and suspend/uspuspend domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
 
 ### 🐛 Bug Fixes
+- [Can't create Email account and can't modify quota #864](https://github.com/stefanpejcic/OpenPanel/issues/864)
 - Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
 - [Installation fails on Debian 13 (possibly Hetzner-specific) #851](https://github.com/stefanpejcic/OpenPanel/issues/851)
 - [Bug in OpenPanel UI on /ftp/password/ #859](https://github.com/stefanpejcic/OpenPanel/issues/859)
