--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -9,6 +9,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed bug on plan edit that caused the `max_email_quota`  to be saved as `{35}` in the database.
+- [Changing "Mailbox quota: " value will alway return the value "{15}" #866](https://github.com/stefanpejcic/OpenPanel/issues/866)
 - [Can't create Email account and can't modify quota #864](https://github.com/stefanpejcic/OpenPanel/issues/864)
 - Fixed bug on *OpenAdmin > Settings > General* that caused the procy value to update even when not provided.
 - [Installation fails on Debian 13 (possibly Hetzner-specific) #851](https://github.com/stefanpejcic/OpenPanel/issues/851)
