--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -8,6 +8,7 @@ Not yet released.
 - [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, option to mange SSL, configure HSTS, disable WAF and suspend/uspuspend domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
 
 ### 🐛 Bug Fixes
+- [Bug in sentinel.sh - unix timestamp in swap notification #865](https://github.com/stefanpejcic/OpenPanel/issues/865)
 - Fixed bug on plan edit that caused the `max_email_quota`  to be saved as `{35}` in the database.
 - [Changing "Mailbox quota: " value will alway return the value "{15}" #866](https://github.com/stefanpejcic/OpenPanel/issues/866)
 - [Can't create Email account and can't modify quota #864](https://github.com/stefanpejcic/OpenPanel/issues/864)
