--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -8,6 +8,7 @@ Not yet released.
 - [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, option to mange SSL, configure HSTS, disable WAF and suspend/uspuspend domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
 
 ### 🐛 Bug Fixes
+- [CSS bug in OpenAdmin UI on Administrators table #862](https://github.com/stefanpejcic/OpenPanel/issues/862)
 - [Bug in OpenPanel UI on /dashboard - data is cached when switching between users #863](https://github.com/stefanpejcic/OpenPanel/issues/863)
 - Fixed bug on *OpenPanel > Dashboard > Usage* widget that caused the data to be fetched twice.
 - [Bug in sentinel.sh - unix timestamp in swap notification #865](https://github.com/stefanpejcic/OpenPanel/issues/865)
