--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -6,6 +6,8 @@ Not yet released.
 - [local captcha options besides cloud #856](https://github.com/stefanpejcic/OpenPanel/discussions/856)
 - Added ['cron_max_file_size_kb' setting](https://dev.openpanel.com/cli/config.html#cron-max-file-size-kb).
 - [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, option to mange SSL, configure HSTS, disable WAF and suspend/uspuspend domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
+- Optimized resource usage for user and admin panel services.
+
 
 ### 🐛 Bug Fixes
 - [CSS bug in OpenAdmin UI on Administrators table #862](https://github.com/stefanpejcic/OpenPanel/issues/862)
@@ -27,3 +29,4 @@ Not yet released.
 - Fixed bug that was causing *license invalid* messages on OpenAdmin pages with multi-core servers.
 - Fixed CSS bug on *OpenAdmin > Dahsboard > Activity widget* that did not truncate long text.
 - Fixed bug on email creation that caused quota to be displayed as unlimited in user panel.
+- Fixed bug with user panel logs showing messages per worker, resulting in duplicate messages.
