--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - [German language support update#18](https://github.com/stefanpejcic/openpanel-translations/pull/18)
 - [Bulgarian translation](https://community.openpanel.org/d/246-govoris-li-blgarski-bulgarian-translation-for-openpanel)
+- [Fix translation warnings, update Spanish & Chinese locales, and ignore compiled files#14](https://github.com/stefanpejcic/openpanel-translations/pull/14)
 - Added [option to toggle dev_mode from *OpenAdmin > Settings > General* page](https://i.postimg.cc/jsfHnmZY/2026-02-09-14-14.png).
 - [local captcha options besides cloud #856](https://github.com/stefanpejcic/OpenPanel/discussions/856)
 - Added ['cron_max_file_size_kb' setting](https://dev.openpanel.com/cli/config.html#cron-max-file-size-kb).
