--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -11,6 +11,7 @@ Not yet released.
 - Added ['cron_max_file_size_kb' setting](https://dev.openpanel.com/cli/config.html#cron-max-file-size-kb).
 - [Enhanced the *OpenAdmin > Domains* page: added **ID** and **Docroot** columns, made columns user-configurable, introduced sorting functionality, option to mange SSL, configure HSTS, disable WAF and suspend/uspuspend domains.](https://i.postimg.cc/hcVKf04H/2026-02-11-14-07.png)
 - Optimized resource usage for user and admin panel services.
+- Configured a workflow to validate Python code using [Pyright](https://github.com/microsoft/pyright) prior to each version release.
 
 
 ### 🐛 Bug Fixes
