--- a/website/docs/changelog/1.7.43.md
+++ b/website/docs/changelog/1.7.43.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on February 14, 2025
 
 ### 💅 Polish
 - [German language support update#18](https://github.com/stefanpejcic/openpanel-translations/pull/18)
