--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
+
 ### 🐛 Bug Fixes
