--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -4,7 +4,4 @@ Not yet released.
 - Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
 
 ### 🐛 Bug Fixes
-
-
-### Security
-- Issue: [B113:request_without_timeout] Call to requests without timeout in OpenAdmin ./modules/users.py:525:19
+- [Bug in /file-manager/upload - upload percentage stuck on 1% #861](https://github.com/stefanpejcic/OpenPanel/issues/861)
