--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
+- `--skip-themes` flag is added to all wp-cli commands in WP Manager.
 
 ### 🐛 Bug Fixes
 - [Bug in /file-manager/upload - upload percentage stuck on 1% #861](https://github.com/stefanpejcic/OpenPanel/issues/861)
