--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -10,3 +10,4 @@ Not yet released.
 - Fixed 500 error on email edit page.
 - `/usr/local/opencli/sentinel.sh: line 64: 2026-02-18 17:59:52: syntax error in expression (error token is "17:59:52")`
 - `[1] [CRITICAL] WORKER TIMEOUT (pid:75)`
+- Fixed bug generating auto-login link for WP Manager when website was added (scanned) and mu-plugins directory does not exist.
