--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -8,6 +8,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug in /file-manager/upload - upload percentage stuck on 1% #861](https://github.com/stefanpejcic/OpenPanel/issues/861)
+- Fixed caching bug on `/api/database_info` and `/api/database-size`.
 - Fixed 500 error on email edit page.
 - `/usr/local/opencli/sentinel.sh: line 64: 2026-02-18 17:59:52: syntax error in expression (error token is "17:59:52")`
 - `[1] [CRITICAL] WORKER TIMEOUT (pid:75)`
